mal-translation fixed

--- a/content/2019-06-13-bewhite.md
+++ b/content/2019-06-13-bewhite.md
@@ -18,7 +18,7 @@ backgroundPosition: 35%
 花王のＰＲ会社によると、家庭用洗剤「アタック」の強力な洗浄力や、社員の働き方に配慮した企業を「ホワイト企業」と呼ぶことにちなみ、プロジェクト名に「ホワイト」の文言を入れた。
 社員を対象にした仕事や家事に関するアンケートを基に、働き方を見直したり家族間で家事を分担したりする必要性を訴える内容。社員が出演する動画も公開していた。
 花王ファブリックケア事業部の新たな取り組みとして１２日にサイトを開設し、１３日に指摘があった。再開時期は未定としている。
-<a class="vglnk" href="https://www.sankei.com/life/news/190613/lif1906130036-n1.html">https://www.sankei.com/life/news/190613/lif1906130036-n1.html</a></span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>VYOXYnEj0.net</span> <span title="2019/06/13(木) 20:39:30.02">2019/06/13 20:39</span></div><div style="padding-top: 10px;"><p class="content">쇼모나<br><span class="jp">しょうもな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>eW6s9Ztf0.net</span> <span title="2019/06/13(木) 20:40:29.87">2019/06/13 20:40</span></div><div style="padding-top: 10px;"><p class="content">머리가 나쁜 회사구먼.<br><span class="jp">頭の悪い会社だな。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>rfg7jQeh0.net</span> <span title="2019/06/13(木) 20:41:05.94">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">큐어화이트 전부 부정이야?<br><span class="jp">キュアホワイト全否定かよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>vm7HA/cn0.net</span> <span title="2019/06/13(木) 20:41:06.48">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">화이트 앤드 화이트
+<a class="vglnk" href="https://www.sankei.com/life/news/190613/lif1906130036-n1.html">https://www.sankei.com/life/news/190613/lif1906130036-n1.html</a></span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>VYOXYnEj0.net</span> <span title="2019/06/13(木) 20:39:30.02">2019/06/13 20:39</span></div><div style="padding-top: 10px;"><p class="content">한심하다<br><span class="jp">しょうもな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>eW6s9Ztf0.net</span> <span title="2019/06/13(木) 20:40:29.87">2019/06/13 20:40</span></div><div style="padding-top: 10px;"><p class="content">머리가 나쁜 회사구먼.<br><span class="jp">頭の悪い会社だな。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>rfg7jQeh0.net</span> <span title="2019/06/13(木) 20:41:05.94">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">큐어화이트 전부 부정이야?<br><span class="jp">キュアホワイト全否定かよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>vm7HA/cn0.net</span> <span title="2019/06/13(木) 20:41:06.48">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">화이트 앤드 화이트
 도슨이라구<br><span class="jp">ホワイトアンドホワイト
 どーすんだよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>j44UqgpG0.net</span> <span title="2019/06/13(木) 20:41:09.54">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">그런 식으로 연상하는 편이 차별이잖아<br><span class="jp">そんなもん色から連想する方が差別だろ</span> </p></div><div class="content2"><div class="id">108. ID: <span>Ffju9FC70.net</span> <span title="2019/06/13(木) 20:56:44.11">2019/06/13 20:56</span></div><div style="padding-top: 10px;"><p class="content">혼토소우
 이런걸 차별이라고 말하는 본인이 가장 차별의식이 있지<br><span class="jp">ホントそう
@@ -43,8 +43,8 @@ backgroundPosition: 35%
 なんか本当にうんざりしてくるな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">162. ID: <span>OIN+h1Rh0.net</span> <span title="2019/06/13(木) 21:11:41.97">2019/06/13 21:11</span></div><div style="padding-top: 10px;"><p class="content">정말 바보같음
 미백이란 표현도 차별용어로구나 바보들은 때려라<br><span class="jp">ほんま馬鹿
 美白って表現も差別用語だな、アホどもは叩けよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">169. ID: <span>YlqVLBUH0.net</span> <span title="2019/06/13(木) 21:12:30.58">2019/06/13 21:12</span></div><div style="padding-top: 10px;"><p class="content">쓰잘데기없다
-빨래가 하얗게 되는 것은 그거야.
-기쁘단 말이야.뭐가 나쁘냐?
+세탁물이 하얗게 되는 것은 그야
+기쁘단 말이야. 뭐가 나쁘냐?
 이런 투덜거리는 녀석의 얼굴을 보고 싶다
 똑똑히 말해서 때리고 싶다<br><span class="jp">くだらない
 洗濯物が白くなるのはそりゃ
