--- a/content/2019-09-30-zard.md
+++ b/content/2019-09-30-zard.md
@@ -28,7 +28,7 @@ backgroundPosition: 45%
 라고 할까 미야네의 캐리어의 길이에 놀랐다.<br><span class="jp">おはよう朝日ですにゲストで出て、宮根と絡んでる動画がYouTubeにあって見たわ
 というか宮根のキャリアの長さに驚いた</span> </p></div><div class="content2"><div class="id">47. ID: <span>OXyZS18S0.net</span> <span title="2019/09/30(月) 02:07:44.48">2019/09/30 02:07</span></div><div style="padding-top: 10px;"><p class="content">안녕? 아침은, 옛날에는 가끔 가수가 생가를 부르거나 한것 같아.<br><span class="jp">おは朝って昔はたまに歌手が生歌歌ってたりしたらしいのよな</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">43. ID: <span class="op">0GiS1gpo0.net</span> <span title="2019/09/30(月) 02:06:48.88">2019/09/30 02:06</span></div><div style="padding-top: 10px;"><p class="content">지금 살아 있었으면 51?
 어떤 느낌이 들었을까?<br><span class="jp">今生きてたら51か
-どんな感じになってたんやろなぁ</span> </p></div><div class="content2"><div class="id">54. ID: <span>RUr0ivcM0.net</span> <span title="2019/09/30(月) 02:08:49.05">2019/09/30 02:08</span></div><div style="padding-top: 10px;"><p class="content">입지적으로는 다이코쿠마키(大黒)같은 느낌?<br><span class="jp">立ち位置的には大黒摩季みたいな感じ？</span> </p></div><div class="content2"><div class="id">66. ID: <span class="op">0GiS1gpo0.net</span> <span title="2019/09/30(月) 02:10:36.40">2019/09/30 02:10</span></div><div style="padding-top: 10px;"><p class="content">아니지...
+どんな感じになってたんやろなぁ</span> </p></div><div class="content2"><div class="id">54. ID: <span>RUr0ivcM0.net</span> <span title="2019/09/30(月) 02:08:49.05">2019/09/30 02:08</span></div><div style="padding-top: 10px;"><p class="content">입지적으로는 오구로마키같은 느낌?<br><span class="jp">立ち位置的には大黒摩季みたいな感じ？</span> </p></div><div class="content2"><div class="id">66. ID: <span class="op">0GiS1gpo0.net</span> <span title="2019/09/30(月) 02:10:36.40">2019/09/30 02:10</span></div><div style="padding-top: 10px;"><p class="content">아니지...
 저런 그림자는 별로 없다고 생각해
 겉보기에는 나카모리 센리보다 젊어 보였다고 생각한다<br><span class="jp">違うやろ...
 あんな影薄くないと思うわ
