--- a/content/2019-11-10-english.md
+++ b/content/2019-11-10-english.md
@@ -40,7 +40,7 @@ I isみたいにbe動詞めちゃくちゃな奴おるらしいで</span> </p></
 일본에서는 그냥 생활하다가 쓰는 영어 쓸 필요 없어<br><span class="jp">独学で英語の勉強してるんやが聞き取りいくらでも身に付けられるけど喋りは難しいよな
 日本じゃ普通に生活してたら使う英語使う必要性皆無やし</span> </p></div><div class="content2"><div class="id">86. ID: <span>pLgcmIkU0.net</span> <span title="2019/11/10(日) 20:06:56.12">2019/11/10 20:06</span></div><div style="padding-top: 10px;"><p class="content">세야나<br><span class="jp">せやな</span> </p></div></div><div class="content2"><div class="id">102. ID: <span>sBykPyiq0.net</span> <span title="2019/11/10(日) 20:09:11">2019/11/10 20:09</span></div><div style="padding-top: 10px;"><p class="content">그럼 독일어학하는데 영어를 잘하겠어?<br><span class="jp">そりゃドイツ語学んでるのに英語上手くなるわけないやろ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">77. ID: <span>pLgcmIkU0.net</span> <span title="2019/11/10(日) 20:05:52.54">2019/11/10 20:05</span></div><div style="padding-top: 10px;"><p class="content">2개국어 할 수 있는 녀석은 두 나라 말
 3개국어 할 줄 아는 녀석은 3개 국어
-영어로밖에 말못하는 사람은 아메리칸(아메리칸)
+영어로밖에 말못하는 사람은 아메리칸
 같은 표현이 유행인가 보군<br><span class="jp">2カ国語できるやつはバイリンガル
 ３カ国語できるやつはトリリンガル
 英語しか喋れないやつはアメリカン
