--- a/content/2019-11-18-hongkong.md
+++ b/content/2019-11-18-hongkong.md
@@ -20,9 +20,9 @@ backgroundPosition: 35%
 중국같은 쓰레기에 녹슬지근한 건 정말 질색이야.<br><span class="jp">香港が落ちたら次は台湾やぞ
 台湾が中国になってもええんか？
 アメリカにヘタレるのは別にええわ
-中国みたいなゴミにヘタレるのはマジでアカン</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>E67oPcLj0.net</span> <span title="2019/11/18(月) 04:05:39.35">2019/11/18 04:05</span></div><div style="padding-top: 10px;"><p class="content">일본은 자기때문에 힘에 겨워!<br><span class="jp">日本は自分のことで精一杯やねん</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">7. ID: <span class="op">xYD6wXYj0.net</span> <span title="2019/11/18(月) 04:06:16.12">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">왠지 일본인들이 홍콩문제에서 도망쳐서 방관하는 느낌이 싫어<br><span class="jp">なんか日本人が香港問題から逃げて傍観してる感じが嫌いやねん</span> </p></div><div class="content2"><div class="id">8. ID: <span>E67oPcLj0.net</span> <span title="2019/11/18(月) 04:06:32">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">외국의 일들<br><span class="jp">外国のことやからな</span> </p></div></div><div class="content2"><div class="id">12. ID: <span>YKW2FB3A0.net</span> <span title="2019/11/18(月) 04:07:29">2019/11/18 04:07</span></div><div style="padding-top: 10px;"><p class="content">&gt;&gt;7지지하지만 중공이 화풀이로 일본인 시비하고 체포나 저지르니까 멀리서나마 지원하고 있을까<br><span class="jp">&gt;&gt;7支持したいけど中共が八つ当たりで邦人難癖つけて逮捕とかやらかすからね陰ながら支援していかな</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span class="op">xYD6wXYj0.net</span> <span title="2019/11/18(月) 04:06:47.65">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">홍콩→대만→오키나와 야조
+中国みたいなゴミにヘタレるのはマジでアカン</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>E67oPcLj0.net</span> <span title="2019/11/18(月) 04:05:39.35">2019/11/18 04:05</span></div><div style="padding-top: 10px;"><p class="content">일본은 자기때문에 힘에 겨워!<br><span class="jp">日本は自分のことで精一杯やねん</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">7. ID: <span class="op">xYD6wXYj0.net</span> <span title="2019/11/18(月) 04:06:16.12">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">왠지 일본인들이 홍콩문제에서 도망쳐서 방관하는 느낌이 싫어<br><span class="jp">なんか日本人が香港問題から逃げて傍観してる感じが嫌いやねん</span> </p></div><div class="content2"><div class="id">8. ID: <span>E67oPcLj0.net</span> <span title="2019/11/18(月) 04:06:32">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">외국의 일들<br><span class="jp">外国のことやからな</span> </p></div></div><div class="content2"><div class="id">12. ID: <span>YKW2FB3A0.net</span> <span title="2019/11/18(月) 04:07:29">2019/11/18 04:07</span></div><div style="padding-top: 10px;"><p class="content">지지하지만 중공이 화풀이로 일본인 시비하고 체포나 저지르니까 멀리서나마 지원하고 있을까<br><span class="jp">&gt;&gt;7支持したいけど中共が八つ当たりで邦人難癖つけて逮捕とかやらかすからね陰ながら支援していかな</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span class="op">xYD6wXYj0.net</span> <span title="2019/11/18(月) 04:06:47.65">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">홍콩→대만→오키나와 야조
 이대로 하면 일본도 남의 일이 아니다<br><span class="jp">香港→台湾→沖縄やぞ
-このままやったら日本も他人事ではない</span> </p></div><div class="content2"><div class="id">13. ID: <span>3DKJ/LuI0.net</span> <span title="2019/11/18(月) 04:07:34">2019/11/18 04:07</span></div><div style="padding-top: 10px;"><p class="content">당질인 양초<br><span class="jp">糖質めいてて草</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>Ncq0VHUNd.net</span> <span title="2019/11/18(月) 04:06:56.19">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">데모대 쪽이 지나치지
+このままやったら日本も他人事ではない</span> </p></div><div class="content2"><div class="id">13. ID: <span>3DKJ/LuI0.net</span> <span title="2019/11/18(月) 04:07:34">2019/11/18 04:07</span></div><div style="padding-top: 10px;"><p class="content">조현병다워서 웃음<br><span class="jp">糖質めいてて草</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>Ncq0VHUNd.net</span> <span title="2019/11/18(月) 04:06:56.19">2019/11/18 04:06</span></div><div style="padding-top: 10px;"><p class="content">데모대 쪽이 지나치지
 중국정부라고 양보하고 있으니 너희도 조금은 양보해라<br><span class="jp">デモ隊の方がやり過ぎやろ
 中国政府だって譲歩してるんだからお前らも少しは譲歩しろや</span> </p></div><div class="content2"><div class="id">14. ID: <span class="op">xYD6wXYj0.net</span> <span title="2019/11/18(月) 04:07:34">2019/11/18 04:07</span></div><div style="padding-top: 10px;"><p class="content">인권을 인정하지 않는 것의 어디가 양보하는 것이냐?
 홍콩인에게는 죽든지 공산당 죽든지 둘 중 하나밖에 없다<br><span class="jp">人権を認めないことのどこが譲歩なんや？
